--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
         <title>Titre</title>
 		<link rel="stylesheet" href="bootstrap.css" />
 		<link rel="stylesheet" href="style.css" />
+		<script type="text/javascript" src="script/tp5.js"></script>
     </head>
 
     <body>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-2 col-xs-12 col-sm-2">
+			<div class="col-lg-4 col-xs-12 col-sm-4">
 			
-				.<div class="menu">
+				.<div class="presentation">
 					<header>
 						
-						<img src="ico.jpg" alt="icone Marie Louise"/>
+						<img src="photoProfil.jpg" alt="icone Marie Louise"/>
 						
 					</header>
 					<nav>
