--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Titre</title>
 		<link rel="stylesheet" href="bootstrap.css" />
-		<link rel="stylesheet" href="style/style.css" />
+		<link rel="stylesheet" href="style.css" />
 		<script type="text/javascript" src="script/tp5.js"></script>
     </head>
 
