--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 
 			<section class="col-lg-8 col-xs-12 col-sm-12">
-			
+			<div class="categories">
 			<article>
 			<h3>Titre1</h3>
 			
