--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html style="height: 100%;">
-    <head style="height: 100%;">
+<html>
+    <head>
         <meta charset="utf-8" />
         <title>Titre</title>
-		<link rel="stylesheet" href="bootstrap.css" />
 		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="bootstrap.css" />
+
 		<script type="text/javascript" src="script/tp5.js"></script>
     </head>
 
