--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Titre</title>
+        <title>Théophane GIRARD CV</title>
 		<link rel="stylesheet" href="bootstrap.css" />
 		<link rel="stylesheet" href="style.css" />
 
