--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="row">
 			<div class="col-lg-4 col-xs-12 col-sm-5">
 			
-				.<div class="presentation">
+				<div class="presentation">
 					<header>
 						
 						<img src="photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil"/>
