--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
 			<section class="col-lg-8 col-xs-12 col-sm-7">
 			<div class="categories">
 				<article>
-				<h3>Titre1</h3>
-				
-				<p>PRESENTATION DE MOI XDLOL
-				</p>
+				<h3>PRESENTATION DE MOI XDLOL</h3>
 				
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut dolor
 				</p>
