--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
 						 <br>
 						titre des catégorieshihi
 						<ul>
-							<li> titre1 </li>
-							<li> titre1 </li>
-							<li> titre1 </li>
-							<li> titre1 </li>
-							<li> titre1 </li>
+							<a href="#formation">titre1</a> 
+							<a href="#expPro">titre1</a> 
+							<a href="#skill">titre1</a> 
+							<a href="#centreInteret">titre1</a> 
 						</ul>	
 
 		
