--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 						 <br>
 						titre des catégorieshihi
 						<ul>
-							<a href="#formation">titre1</a> 
-							<a href="#expPro">titre1</a> 
-							<a href="#skill">titre1</a> 
-							<a href="#centreInteret">titre1</a> 
+						<li>	<a href="#formation">titre1</a> </li>
+						<li>	<a href="#expPro">titre1</a> </li>
+						<li>	<a href="#skill">titre1</a> </li>
+						<li>	<a href="#centreInteret">titre1</a> </li>
 						</ul>	
 
 		
