--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					
 					<p> 
 						 <br>
-						titre des catégorieshihi
+						<h3>titre des catégorieshihi</h3>
 						<ul>
 							<li><a href="#formation">Formation</a></li>
 							<li><a href="#expPro">Experience Professionnelles</a></li>
