--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 						 <br>
 						<h3>titre des catégorieshihi</h3>
 						<ul>
-							<li><a href="#formation">Formation</a></li>
-							<li><a href="#expPro">Experience Professionnelles</a></li>
-							<li><a href="#skill">Compétences</a></li>
-							<li><a href="#centreInteret">Centres d'Interets</a></li>
+							<li><img src="img/fleche.png" id="flecheFor"/><a href="#formation">Formation</a></li>
+							<li><img src="img/fleche.png" id="flecheEx"/><a href="#expPro">Experience Professionnelles</a></li>
+							<li><img src="img/fleche.png" id="flecheComp"/><a href="#skill">Compétences</a></li>
+							<li><img src="img/fleche.png" id="flecheCI"/><a href="#centreInteret">Centres d'Interets</a></li>
 						</ul>	
 
 		
