--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 						 <br>
 						<h3>titre des catégorieshihi</h3>
 						<ul>
-							<li><img src="img/fleche.png" id="flecheFor"/><a href="#formation">Formation</a></li>
-							<li><img src="img/fleche.png" id="flecheEx"/><a href="#expPro">Experience Professionnelles</a></li>
-							<li><img src="img/fleche.png" id="flecheComp"/><a href="#skill">Compétences</a></li>
-							<li><img src="img/fleche.png" id="flecheCI"/><a href="#centreInteret">Centres d'Interets</a></li>
+							<li><img src="img/fleche.png" id="1"/><a href="#formation" class="1">Formation</a></li>
+							<li><img src="img/fleche.png" id="2"/><a href="#expPro" class="2">Experience Professionnelles</a></li>
+							<li><img src="img/fleche.png" id="3"/><a href="#skill" class="3">Compétences</a></li>
+							<li><img src="img/fleche.png" id="4"/><a href="#centreInteret" class="4">Centres d'Interets</a></li>
 						</ul>	
 
 		
