--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						 <br>
 						<h3>titre des catégorieshihi</h3>
 						<ul>
-							<li><a href="#formation" class="1"> <img src="img/fleche.png" id="1"/> Formation</a></li>
+							<li><img src="img/fleche.png" id="1"/> <a href="#formation" class="1">Formation</a></li>
 							<li><img src="img/fleche.png" id="2"/><a href="#expPro" class="2">Experience Professionnelles</a></li>
 							<li><img src="img/fleche.png" id="3"/><a href="#skill" class="3">Compétences</a></li>
 							<li><img src="img/fleche.png" id="4"/><a href="#centreInteret" class="4">Centres d'Interets</a></li>
