--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="bootstrap.css" />
 		<link rel="stylesheet" href="style.css" />
 
-		<script type="text/javascript" src="script/tp5.js"></script>
+		<script type="text/javascript" src="script/script.js"></script>
     </head>
 
     <body>
