--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 		<script type="text/javascript" src="script/jquery-latest.js"></script>
 		<link rel="stylesheet" href="bootstrap.css" />
 		<link rel="stylesheet" href="style.css" />
-
+		
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
 		<script type="text/javascript" src="script/script.js"></script>
     </head>
 
