--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 						 <br>
 						<h3>titre des catégorieshihi</h3>
 						<ul>
-							<li><a href="#formation" class="1">Formation</a></li>
-							<li><a href="#expPro" class="2">Experience Professionnelles</a></li>
-							<li><a href="#skill" class="3">Compétences</a></li>
-							<li><a href="#centreInteret" class="4">Centres d'Interets</a></li>
+							<li><a href="#formation">Formation</a></li>
+							<li><a href="#expPro">Experience Professionnelles</a></li>
+							<li><a href="#skill">Compétences</a></li>
+							<li><a href="#centreInteret">Centres d'Interets</a></li>
+							<li><a href="#contact">Contact</a></li>
 						</ul>	
 
 		
@@ -81,6 +82,16 @@
 				<article class ="aCacher"  id="centreInteret">
 
 							<h3>Centres d'Interets</h3>		
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut dolor dictum, congue turpis a, imperdiet nibh. Mauris eget dapibus dolor, nec dignissim enim. Aliquam sit amet scelerisque neque, quis feugiat ante. Mauris mollis sapien ac dui facilisis bibendum. Nunc vitae odio quam. Suspendisse rutrum augue at metus efficitur dignissim. Fusce egestas in orci molestie lobortis. Pellentesque dignissim bibendum hendrerit. Vestibulum ac gravida mi, pharetra maximus magna. Cras rutrum, urna nec efficitur rutrum, felis mauris aliquet tortor, sed luctus justo justo ac arcu. Phasellus et tortor vel augue tristique tincidunt vitae id augue.
+
+							Donec sollicitudin sodales libero a posuere. Curabitur libero diam, commodo eget malesuada sit amet, lobortis sed tellus. Ut aliquet a magna sed aliquam. Sed viverra malesuada tincidunt. Phasellus mauris sem, porta in justo eget, egestas varius ex. Vivamus mollis dictum est. Nulla facilisi. Curabitur sit amet augue tristique, maximus neque sit amet, elementum nisi. Praesent gravida mauris ac est tincidunt faucibus. Cras sed maximus nulla. Integer et interdum nisi. Ut consectetur arcu ipsum, ut dictum sem aliquet id. Ut mollis dui et dictum vestibulum. Nam elementum auctor arcu et lacinia. Cras vitae urna vitae quam finibus tincidunt non et erat. Morbi gravida, leo eu pulvinar elementum, lectus magna condimentum lectus, ac egestas elit dolor ac enim.
+
+
+				</article>
+				
+				<article class ="aCacher"  id="contact">
+
+							<h3>Contact</h3>		
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut dolor dictum, congue turpis a, imperdiet nibh. Mauris eget dapibus dolor, nec dignissim enim. Aliquam sit amet scelerisque neque, quis feugiat ante. Mauris mollis sapien ac dui facilisis bibendum. Nunc vitae odio quam. Suspendisse rutrum augue at metus efficitur dignissim. Fusce egestas in orci molestie lobortis. Pellentesque dignissim bibendum hendrerit. Vestibulum ac gravida mi, pharetra maximus magna. Cras rutrum, urna nec efficitur rutrum, felis mauris aliquet tortor, sed luctus justo justo ac arcu. Phasellus et tortor vel augue tristique tincidunt vitae id augue.
 
 							Donec sollicitudin sodales libero a posuere. Curabitur libero diam, commodo eget malesuada sit amet, lobortis sed tellus. Ut aliquet a magna sed aliquam. Sed viverra malesuada tincidunt. Phasellus mauris sem, porta in justo eget, egestas varius ex. Vivamus mollis dictum est. Nulla facilisi. Curabitur sit amet augue tristique, maximus neque sit amet, elementum nisi. Praesent gravida mauris ac est tincidunt faucibus. Cras sed maximus nulla. Integer et interdum nisi. Ut consectetur arcu ipsum, ut dictum sem aliquet id. Ut mollis dui et dictum vestibulum. Nam elementum auctor arcu et lacinia. Cras vitae urna vitae quam finibus tincidunt non et erat. Morbi gravida, leo eu pulvinar elementum, lectus magna condimentum lectus, ac egestas elit dolor ac enim.
