--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							Donec sollicitudin sodales libero a posuere. Curabitur libero diam, commodo eget malesuada sit amet, lobortis sed tellus. Ut aliquet a magna sed aliquam. Sed viverra malesuada tincidunt. Phasellus mauris sem, porta in justo eget, egestas varius ex. Vivamus mollis dictum est. Nulla facilisi. Curabitur sit amet augue tristique, maximus neque sit amet, elementum nisi. Praesent gravida mauris ac est tincidunt faucibus. Cras sed maximus nulla. Integer et interdum nisi. Ut consectetur arcu ipsum, ut dictum sem aliquet id. Ut mollis dui et dictum vestibulum. Nam elementum auctor arcu et lacinia. Cras vitae urna vitae quam finibus tincidunt non et erat. Morbi gravida, leo eu pulvinar elementum, lectus magna condimentum lectus, ac egestas elit dolor ac enim.
 
 				</article>												
-				<article class ="aCacher"  id="skill">
+				<article class ="aCacher active"  id="skill">
 
 							<h3>Compétences</h3>					
 												
