--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<h3>Contact</h3>		
 							<a href=""><img src"img/gmail.png" border="0"></a>
 							<a href="#expPro"><img src"img/fb.png" border="0"></a>
-							<a href="#skill"><img src"img/twitter.png" border="0"></a>
+							<a href="#skill"><img src"img/twitter2.ico" border="0"></a>
 
 
 				</article>
