--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
 							<h3>Contact</h3>	
 						<p>
-							<a href=""><img src"img/gmail.png" border="0"></a>
-							<a href="#expPro"><img src"img/fb.png" border="0"></a>
-							<a href="#skill"><img src"img/twitter2.ico" border="0"></a>
+							<a href=""><img src"img/gmail.png"></a>
+							<a href="#expPro"><img src"img/fb.png"></a>
+							<a href="#skill"><img src"img/twitter2.ico"></a>
 						</p>
 
 				</article>
