--- a/index.html
+++ b/index.html
@@ -92,11 +92,10 @@
 				<article class ="aCacher"  id="contact">
 
 							<h3>Contact</h3>	
-						<div class="imageContact">
+
 							<a href=""><img src="img/gmail.png"></a>
 							<a href="#expPro"><img src="img/fb.png"></a>
-							<a href="#skill"><img src="img/twitter2.ico"></a>
-						</div>
+							<a href="#skill"><img src="img/twitter.png"></a>
 
 				</article>
 			</section>
