--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@
 							<a href=""><img src="img/gmail.png"></a>
 							<a href="#expPro"><img src="img/fb.png"></a>
 							<a href="#skill"><img src="img/twitter.png"></a>
+						<script>
+							 $('#contact img').first().show('slow', function showNextOne() {
 
+								$(this).next('img').show('slow', showNextOne);
+
+							  });
+						</script>
 				</article>
 			</section>
 			</div>
