--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@
 							<a href="#expPro"><img src="img/fb.png"></a>
 							<a href="#skill"><img src="img/twitter.png"></a>
 						<script>
+						$(function() {
 							 $('#contact img').first().show('slow', function showNextOne() {
 
 								$(this).next('img').show('slow', showNextOne);
 
 							  });
+						});
 						</script>
 				</article>
 			</section>
