--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 						 <br>
 						<h3>Catégories</h3>
 						<ul>
-							<li><a href="#formation">Formation</a></li>
-							<li><a href="#expPro">Experience Professionnelles</a></li>
-							<li><a href="#skill">Compétences</a></li>
-							<li><a href="#centreInteret">Centres d'Interets</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li><a href="#formation">Ma Formation</a></li>
+							<li><a href="#expPro">Mes Experiences Professionnelles</a></li>
+							<li><a href="#skill">Mes Compétences</a></li>
+							<li><a href="#centreInteret">Mes Centres d'Interets</a></li>
+							<li><a href="#contact">Me Contacter</a></li>
 						</ul>	
 
 		
