--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<h3>Contact</h3>	
 
 							<a href=""><img src="img/gmail.png"></a>
-							<a href="www.facebook.fr"><img src="img/fb.png"></a>
+							<a href="http://www.facebook.com"><img src="img/fb.png"></a>
 							<a href="#skill"><img src="img/twitter.png"></a>
 				</article>
 			</section>
