--- a/index.html
+++ b/index.html
@@ -102,10 +102,15 @@
 				<article class ="aCacher"  id="contact">
 
 							<h3>Contact</h3>	
-
+							<div class="iconeContact">
 							<a href=""><img src="img/gmail.png"></a>
+							</div>
+							<div class="iconeContact">
 							<a href="http://www.facebook.com"><img src="img/fb.png"></a>
+							</div>
+							<div class="iconeContact">
 							<a href="#skill"><img src="img/twitter.png"></a>
+							</div>
 				</article>
 			</section>
 			</div>
