--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
 					
 				<ul>
 					<li>
-					2013-2015 (en cours) IUT Informatique Blagnac - Université Jean Jaurès (anciennement Mirail)
+					2013-2015 (en cours) IUT Informatique Blagnac <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
 					</li>
 					<li>
 					2012-2013 Année préparatoire a l’EISTI - École Internationale des Sciences et du
-				Traitement de l’Information - Académie de Bordeaux
+				Traitement de l’Information <div class="lieu">Académie de Bordeaux</div>
 					</li>
 					<li>
-					2012 BAC S Lycée Clémence-Royer de Fonsorbes
+					2012 BAC S <div class="lieu">Lycée Clémence-Royer de Fonsorbes</div>
 
 					</li>
 					<li>
-					2009 et 2011 Stage linguistique Liverpool - Londres
+					2009 et 2011 Stage linguistique <div class="lieu">Liverpool - Londres</div>
 					</li>
 					<li>
 					Actuellement en formation BAFA
