--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					2013-2015 (en cours) IUT Informatique Blagnac <br> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
 					</li>
 					<li>
-					2012-2013 Année préparatoire a l’EISTI - École Internationale des Sciences et du
+					2012-2013 Année préparatoire <br> EISTI - École Internationale des Sciences et du
 				Traitement de l’Information <div class="lieu">Académie de Bordeaux</div>
 					</li>
 					<li>
