--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					
 				<ul>
 					<li>
-					2013-2015 (en cours) IUT Informatique Blagnac <br> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
+					2013-2015 (en cours) IUT Informatique <br> Blagnac <br> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
 					</li>
 					<li>
 					2012-2013 Année préparatoire <br> EISTI - École Internationale des Sciences et du
