--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
 					
 				<ul>
 					<li>
-					2013-2015 (en cours) IUT Informatique <br> Blagnac <br> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
+					<div class="sujet">2013-2015 (en cours) IUT Informatique</div> <br> Blagnac <br> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
 					</li>
 					<li>
-					2012-2013 Année préparatoire <br> EISTI - École Internationale des Sciences et du
+					<div class="sujet">2012-2013 Année préparatoire</div> <br> EISTI - École Internationale des Sciences et du
 				Traitement de l’Information <div class="lieu">Académie de Bordeaux</div>
 					</li>
 					<li>
-					2012 BAC S <div class="lieu">Lycée Clémence-Royer de Fonsorbes</div>
+					<div class="sujet">2012 BAC S </div><div class="lieu">Lycée Clémence-Royer de Fonsorbes</div>
 
 					</li>
 					<li>
-					2009 et 2011 Stage linguistique <div class="lieu">Liverpool - Londres</div>
+					<div class="sujet">2009 et 2011 Stage linguistique </div><div class="lieu">Liverpool - Londres</div>
 					</li>
 					<li>
-					Actuellement en formation BAFA
+					<div class="sujet">Actuellement en formation BAFA</div>
 					</li>
 					<li>
-					Anglais : niveau C1
+					<div class="sujet">Anglais : niveau C1</div>
 					</li>
 					<li>
-					Espagnol : niveau B2
+					<div class="sujet">Espagnol : niveau B2</div>
 					</li>
 				</ul>
 				</article>										
