--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 					
 				<ul>
 					<li>
-					<div class="sujet">2013-2015 (en cours) IUT Informatique</div> Blagnac <br> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
+					<div class="sujet">2013-2015 (en cours) IUT Informatique</div> <div class="ville">Blagnac </div> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
 					</li>
 					<li>
-					<div class="sujet">2012-2013 Année préparatoire</div> EISTI - École Internationale des Sciences et du
-				Traitement de l’Information <div class="lieu">Académie de Bordeaux</div>
+					<div class="sujet">2012-2013 Année préparatoire</div> <div class="ville">EISTI - École Internationale des Sciences et du
+				Traitement de l’Information</div>  <div class="lieu">Académie de Bordeaux</div>
 					</li>
 					<li>
 					<div class="sujet">2012 BAC S </div><div class="lieu">Lycée Clémence-Royer de Fonsorbes</div>
