--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 					<div class="sujet">Actuellement en formation BAFA</div>
 					</li>
 					<li>
-					<div class="sujet">Anglais : niveau C1</div>
+					<div class="sujet">Anglais  </div><div class="lieu">niveau C1</div>
 					</li>
 					<li>
-					<div class="sujet">Espagnol : niveau B2</div>
+					<div class="sujet">Espagnol </div><div class="lieu">niveau B2</div>
 					</li>
 				</ul>
 				</article>										
