--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="sujet">2009 et 2011 Stage linguistique </div><div class="lieu">Liverpool - Londres</div>
 					</li>
 					<li>
-					<div class="sujet">Actuellement en formation BAFA</div>
+					<div class="sujet">Actuellement</div> <div class="ville"> en formation BAFA</div>
 					</li>
 					<li>
 					<div class="sujet">Anglais  </div><div class="lieu">niveau C1</div>
