--- a/index.html
+++ b/index.html
@@ -89,30 +89,28 @@
 			
 
 							<h3>Experience Professionnelles</h3>	
-										
+							
 				<ul>
 					<li>
-					2013-2015 (en cours) IUT Informatique Blagnac - Université Jean Jaurès (anciennement Mirail)
+					<div class="sujet">	2014-2015 (en cours)</div> <div class="ville"> animateur Chef Scout </div> <div class="lieu">Scout et Guide de France</div>
 					</li>
 					<li>
-					2012-2013 Année préparatoire a l’EISTI - École Internationale des Sciences et du
-				Traitement de l’Information - Académie de Bordeaux
+					<div class="sujet">2013-2014</div> <div class="ville">Collectes alimentaires pour une organisation caritative</div>
 					</li>
 					<li>
-					2012 BAC S Lycée Clémence-Royer de Fonsorbes
+					<div class="sujet">2012</div><div class="ville"> EISTI  </div><div class="lieu">Travaux personnels Encadrés</div>
 
 					</li>
 					<li>
-					2009 et 2011 Stage linguistique Liverpool - Londres
+					<div class="sujet">2011</div><div class="ville">Travaux personnel Encadrés </div><div class="lieu">    Lycée Clémence-Royer</div>
 					</li>
 					<li>
-					Actuellement en formation BAFA
+					<div class="sujet">2011 </div><div class="ville">Projet informatique: Création d’un bureau informatique «nomade» à partir d’une clé USB bootable. Prix de la meilleure innovation technique par
+«Scola Ingeniosa »</div> <div class="ville">Lycée Clémence Royer </div>
 					</li>
 					<li>
-					Anglais : niveau C1
-					</li>
-					<li>
-					Espagnol : niveau B2
+					<div class="sujet">2009</div><div class="ville"> Stage 3ème dans une PME de fabrication de meubles sur machines à bois
+programmées informatiquement<div class="lieu">Fonsorbes (31)</div>
 					</li>
 				</ul>
 
