--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<div class="sujet">2013-2014</div> <div class="ville">Collectes alimentaires pour une organisation caritative</div>
 					</li>
 					<li>
-					<div class="sujet">2012</div><div class="ville"> EISTI  </div><div class="lieu">Travaux personnels Encadrés</div>
+					<div class="sujet">2012</div><div class="ville"> Travaux personnels Encadrés </div><div class="lieu">EISTI</div>
 
 					</li>
 					<li>
