--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					</li>
 					<li>
 					<div class="sujet">2011 </div><div class="ville">Projet informatique: Création d’un bureau informatique «nomade» à partir d’une clé USB bootable. Prix de la meilleure innovation technique par
-«Scola Ingeniosa »</div> <div class="ville">Lycée Clémence Royer </div>
+«Scola Ingeniosa »</div> <div class="lieu">Lycée Clémence Royer </div>
 					</li>
 					<li>
 					<div class="sujet">2009</div><div class="ville"> Stage 3ème dans une PME de fabrication de meubles sur machines à bois
