--- a/index.html
+++ b/index.html
@@ -83,11 +83,14 @@
 				<article class ="aCacher"  id="expPro">	
 			
 
-							<h3>Experience Professionnelles</h3>	
+				<h3>Experience Professionnelles</h3>	
 							
-			  <h3>Experience Professionnelle</h3>
 
         <ul>
+        	<li>
+                <div class="sujet">Actuellement</div> <div class="lieu">Rectorat de l'académie de Toulouse </div>  <div class="ville">Mission: Refonte entière d'une application Web sous le framework Symfony. </div>
+              
+          </li>
           <li>
                 <div class="sujet">2015 Stage (2 mois)</div> <div class="lieu">Martell (groupe Pernod-Ricard) - Cognac</div>  <div class="ville">Mission: Refonte entière d'une application SilverLight de l'entreprise. </div>
                 <ul id="description">
