--- a/index.html
+++ b/index.html
@@ -112,13 +112,21 @@
 
 							<h3>Compétences</h3>					
 															
-				<ul>
+							<ul>
 					<li>
-					<div class="sujet">	Bureautique</div> <div class="ville">  Word, Excel et Power Point</div>
+					       <div class="sujet">Langages</div> <div class="ville">  Java, C#, MySQL, HTML 5, PHP, JQuery, C, Python, Cobol</div>
 					</li>
 					<li>
-					<div class="sujet">Programmation </div> <div class="ville">Java, C, Python, MySQL, HTML 5, PHP, JQuery, Cobol</div>
+					       <div class="sujet">Base de données </div> <div class="ville">MySQL, Microsoft SQL Server</div>
 					</li>
+          <li>
+                 <div class="sujet">Logiciels</div> <div class="ville">Git, Word, Excel, Virtualbox, MySQL Workbench, Photofiltre</div>
+          </li>
+          <li>
+                 <div class="sujet">Modélisation</div> <div class="ville">Merise, UML</div>
+          </li>
+
+
 				</ul>
 
 				</article>						
