--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 	<div class="container">
 
 		<div class="row">
-			<div class="col-lg-4 col-xs-4 col-sm-4 fixe">
+			<div class="col-lg-4 col-xs-4 col-sm-4 fixe visible">
 
 				<div class="menu">
 
-						<img src="photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil"/>
+						<img src="photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil visible"/>
 					<p>
 						 <br>
 						<h3>Catégories</h3>
 						<ul>
-             				<li><a class="scrollTo" href="#expPro">Mon Experience Professionnelle</a></li>
-							<li><a class="scrollTo" href="#formation">Ma Formation</a></li>
-							<li><a class="scrollTo" href="#skill">Mes Compétences</a></li>
-              				<li><a class="scrollTo" href="#langue">Mes Langues</a></li>
-							<li><a class="scrollTo" href="#centreInteret">Mes Activités transversales</a></li>
-              				<li><a class="scrollTo"  href="#contact">Me Contacter</a></li>
+                   				<li><a class="scrollTo" href="#expPro">Mon Experience Professionnelle</a></li>
+      						<li><a class="scrollTo" href="#formation">Ma Formation</a></li>
+      						<li><a class="scrollTo" href="#skill">Mes Compétences</a></li>
+                    				<li><a class="scrollTo" href="#langue">Mes Langues</a></li>
+      						<li><a class="scrollTo" href="#centreInteret">Mes Activités transversales</a></li>
+                    				<li><a class="scrollTo"  href="#contact">Me Contacter</a></li>
 						</ul>
 
 
@@ -41,8 +41,13 @@
 
 			<section class="col-lg-8 col-xs-8 col-sm-8 content">
 					<header>
+
 						<div class="bandeau">
-							<h1 style="text-align:center"> Théophane Girard</h1>
+                                          <div class="mobile">
+                                                <img src="photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil" id="cachee"/>
+                                                <h1 style="text-align:center"> Théophane Girard</h1>
+                                          </div>
+
     							<div class="dispositionIcone">
     								<a href="mailto:girard.theophane@gmail.com"><img src="img/gmail.png"  class="iconeBandeau img-zoom"></a>
     							</div>
@@ -54,7 +59,7 @@
     							</div>
 						</div>
 					</header>
-				<article>
+				<article class="intro">
 
 				<p>
 				Titulaire d'un DUT en Informatique, j'apprécie énormément le Développement Web et Développement Orienté Objet.<br> Mon experience professionnelle m'a appris à devenir améliorer mon autonomie puisque au cours de celle-ci, j'ai dû travailler seul sur le projet qui m'a été confié. <br>Mes études et mes formations m'ont permis de développer ma capacité à travailler en équipe, à
