--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 				<br>
 
-        <article class ="aCacher active haut"  id="expPro">
+        <article class ="active haut"  id="expPro">
 
 
               <h3>Experience Professionnelle</h3>
@@ -109,7 +109,7 @@
         </ul>
 
         </article>
-				<article class ="aCacher active"  id="formation">
+				<article id="formation">
 
 						<h3>Formation</h3>
 
@@ -132,7 +132,7 @@
 
 				</ul>
 				</article>
-				<article class ="aCacher active"  id="skill">
+				<article id="skill">
 
 							<h3>Compétences</h3>
 
@@ -155,7 +155,7 @@
 
 				</article>
 
-        <article class ="aCacher active"  id="langue">
+        <article id="langue">
 
                 <h3>Langues</h3>
 
@@ -170,7 +170,7 @@
           </ul>
 
           </article>
-          <article class ="aCacher active"  id="centreInteret">
+          <article id="centreInteret">
 							<h3>Mes Activités transversales</h3>
 
 				<ul>
@@ -186,7 +186,7 @@
         </ul>
 				</article>
 
-				<article class ="aCacher active"  id="contact">
+				<article id="contact">
 
 							<h3>Contact</h3>
 							<div class="iconeContact">
