--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					       <div class="sujet">Base de données </div> <div class="ville">MySQL, Microsoft SQL Server</div>
 					</li>
           <li>
-                 <div class="sujet">Logiciels</div> <div class="ville">Git, Word, Excel, Virtualbox, MySQL Workbench, Photofiltre</div>
+                 <div class="sujet">Logiciels</div> <div class="ville">SVN, Word, Excel, Virtualbox, MySQL Workbench, Photofiltre</div>
           </li>
           <li>
                  <div class="sujet">Modélisation</div> <div class="ville">Merise, UML</div>
