--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8" />
         <title>Théophane GIRARD CV</title>
 		<script type="text/javascript" src="script/jquery-latest.js"></script>
-		<link rel="stylesheet" href="bootstrap.css" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="styles/bootstrap.css" />
+		<link rel="stylesheet" href="styles/style.css" />
 		<link rel="shortcut icon" href="img/icon.ico" />
     <meta name="viewport" content="width=device-width, user-scalable=yes" />
-    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="styles/responsive.css" />
 
 	<script type="text/javascript" src="script/script.js"></script>
     </head>
@@ -21,7 +21,7 @@
 
 				<div class="menu">
 
-						<img src="photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil visible"/>
+						<img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil visible"/>
 					<p>
 						 <br>
 						<h3>Catégories</h3>
@@ -44,7 +44,7 @@
 
 						<div class="bandeau">
                                           <div class="mobile">
-                                                <img src="photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil" id="cachee"/>
+                                                <img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" class="photoProfil" id="cachee"/>
                                                 <h1 style="text-align:center"> Théophane Girard</h1>
                                           </div>
 
