--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Théophane GIRARD CV</title>
 		<script type="text/javascript" src="script/jquery-latest.js"></script>
 		<link rel="stylesheet" href="styles/bootstrap.css" />
-		<link rel="stylesheet" href="styles/style.css" />
+		<link rel="stylesheet" href="style.css" />
 		<link rel="shortcut icon" href="img/icon.ico" />
     <meta name="viewport" content="width=device-width, user-scalable=yes" />
     <link rel="stylesheet" href="styles/responsive.css" />
