--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8" />
         <title>Théophane GIRARD CV</title>
 		<script type="text/javascript" src="script/jquery-latest.js"></script>
-		<link rel="stylesheet" href="styles/bootstrap.css" />
+		<link rel="stylesheet" href="css/bootstrap.css" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="shortcut icon" href="img/icon.ico" />
     <meta name="viewport" content="width=device-width, user-scalable=yes" />
-    <link rel="stylesheet" href="styles/responsive.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
 
 	<script type="text/javascript" src="script/script.js"></script>
     </head>
