--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     </head>
 
     <body>
+	
+	<div id="menuMobile" class ="menu">
+            <h3>Catégories</h3>
+            <ul>
+                        <li><a class="scrollTo" href="#expPro">Mon Experience Professionnelle</a></li>
+                        <li><a class="scrollTo" href="#formation">Ma Formation</a></li>
+                        <li><a class="scrollTo" href="#skill">Mes Compétences</a></li>
+                        <li><a class="scrollTo" href="#langue">Mes Langues</a></li>
+                        <li><a class="scrollTo" href="#centreInteret">Mes Activités transversales</a></li>
+                        <li><a class="scrollTo"  href="#contact">Me Contacter</a></li>
+            </ul>
+    </div>
+	
 	<div class="container">
 
 		<div class="row">
@@ -203,9 +216,5 @@
 			</div>
 		</div>
     </div>
-	<nav>
-
-
-	</nav>
     </body>
 </html>
