--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
     <head>
         <meta charset="utf-8" />
         <title>Théophane GIRARD CV</title>
-		<script type="text/javascript" src="script/jquery-latest.js"></script>
-		<link rel="stylesheet" href="css/bootstrap.css" />
-		<link rel="stylesheet" href="style.css" />
-		<link rel="shortcut icon" href="img/icon.ico" />
-    <meta name="viewport" content="width=device-width, user-scalable=yes" />
-    <link rel="stylesheet" href="css/responsive.css" />
-
-	<script type="text/javascript" src="script/script.js"></script>
+            <script type="text/javascript" src="script/jquery-latest.js"></script>
+            <link rel="stylesheet" href="css/bootstrap.css" />
+            <link rel="stylesheet" href="style.css" />
+            <link rel="shortcut icon" href="img/icon.ico" />
+            <meta name="viewport" content="width=device-width, user-scalable=yes" />
+            <link rel="stylesheet" href="css/responsive.css" />
+            <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+            <link rel="stylesheet" href="../css/themes/default/jquery.mobile-1.4.5.min.css">
+            <script src="../js/jquery.js"></script>
+            <script src="../_assets/js/index.js"></script>
+            <script src="jqm/jquery.mobile-1.4.5.min.js"></script>
+            <script type="text/javascript" src="script/script.js"></script>
     </head>
 
     <body>
