--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
             <script src="../_assets/js/index.js"></script>
             <script src="jqm/jquery.mobile-1.4.5.min.js"></script>
             <script type="text/javascript" src="script/script.js"></script>
+            <script type="text/javascript" src="jqm/jquery.touchSwipe.min.js"></script>
+            <script type="text/javascript" src="jqm/jquery.touchSwipe.js"></script>
     </head>
 
     <body>
-	
+
 	<div id="menuMobile" class ="menu">
             <h3>Catégories</h3>
             <ul>
@@ -30,7 +32,7 @@
                         <li><a class="scrollTo"  href="#contact">Me Contacter</a></li>
             </ul>
     </div>
-	
+
 	<div class="container">
 
 		<div class="row">
