--- a/index.html
+++ b/index.html
@@ -18,97 +18,70 @@
             <script type="text/javascript" src="script/script.js"></script>
             <script type="text/javascript" src="jqm/jquery.touchSwipe.min.js"></script>
             <script type="text/javascript" src="jqm/jquery.touchSwipe.js"></script>
-            <link rel="stylesheet" href="style.css" />
-            <link rel="stylesheet" href="css/responsive.css" />
+                        <link rel="stylesheet" href="TEST1.css" />
+                        <link rel="stylesheet" href="TEST2.css" />
     </head>
 
     <body>
 
-          <div id="menuMobile">
-                  <div id="espaceImage">
-                            <img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" id="photoProfil"/>
-                            <div class="dispositionIcone">
-                                  <a href="mailto:girard.theophane@gmail.com"><img src="img/gmail.png"  class="iconeBandeau img-zoom"></a>
+      <div id="menuMobile">
+                  <div id="espaceImageMobile" class="espaceImage">
+                          <img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" id="photoProfil"/>
+                          <div class="dispositionIcone">
+                                <a href="mailto:girard.theophane@gmail.com"><img src="img/gmail.png"  class="iconeReseauxSociaux img-zoom"></a>
 
-                                  <a href="https://www.facebook.com/theophane.girard?fref=ts"><img src="img/fb.png" class="iconeBandeau img-zoom"></a>
+                                <a href="https://www.facebook.com/theophane.girard?fref=ts"><img src="img/fb.png" class="iconeReseauxSociaux img-zoom"></a>
 
-                                  <a href="https://twitter.com/girardtheophane?lang=fr"><img src="img/twitter.png" class="iconeBandeau img-zoom"></a>
-                            </div>
+                                <a href="https://twitter.com/girardtheophane?lang=fr"><img src="img/twitter.png" class="iconeReseauxSociaux img-zoom"></a>
+                          </div>
                   </div>
-                  <div id=conteneurEspaceLien>
-                                    <div id="espaceLien">
-                                                      <hr>
-                                                      <div class="verticalAlign">
-                                                      <a class="scrollTo" href="#profil">Mon Profil</a>
-                                                    </div>
-                                                      <hr>
-                                                      <div class="verticalAlign">
-                                                      <a class="scrollTo longMot" href="#expPro">Mon Experience Professionnelle</a>
-                                                    </div>
-                                                      <hr>
-                                                      <div class="verticalAlign">
-                                                      <a class="scrollTo" href="#formation">Ma Formation</a>
-                                                    </div>
-                                                      <hr>
-                                                      <div class="verticalAlign">
-                                                      <a class="scrollTo" href="#skill">Mes Compétences</a>
-                                                    </div>
-                                                      <hr>
-                                                      <div class="verticalAlign">
-                                                          <a class="scrollTo" href="#langue">Mes Langues</a>
-                                                        </div>
-                                                      <hr>
-                                                      <div class="verticalAlign">
-                                                            <a class="scrollTo longMot" href="#centreInteret">Mes Activités transversales</a>
-                                                          </div>
-                                                      <hr>
-                                  </div>
-                </div>
-            </div>
+                  <div id="espaceLienMobile" class="espaceLien">
+                                          <hr>
+                                                <a class="scrollTo" href="#profil">Mon Profil</a>
+                                          <hr>
+                                                <a class="scrollTo longMot" href="#expPro">Mon Experience Professionnelle</a>
+                                          <hr>
+                                                <a class="scrollTo" href="#formation">Ma Formation</a>
+                                          <hr>
+                                                <a class="scrollTo" href="#skill">Mes Compétences</a>
+                                          <hr>
+                                              <a class="scrollTo" href="#langue">Mes Langues</a>
+                                          <hr>
+                                                <a class="scrollTo longMot" href="#centreInteret">Mes Activités transversales</a>
+                                          <hr>
+                  </div>
+      </div>
 
             <div class="row" id="container">
                   <div class="col-lg-4 col-sm-4 hidden-xs visible" id="menuPC">
-                              <div id="espaceImage">
-						<img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" id="photoProfil"/>
+                              <div id="espaceImagePC" class="espaceImage">
+                                      <img src="img/photoProfil.jpg" alt="photo de Théophane GIRARD" id="photoProfil"/>
+                                      <div class="dispositionIcone">
+                                            <a href="mailto:girard.theophane@gmail.com"><img src="img/gmail.png"  class="iconeReseauxSociaux img-zoom"></a>
 
-                                    <div class="dispositionIcone">
-                                          <a href="mailto:girard.theophane@gmail.com"><img src="img/gmail.png"  class="iconeBandeau img-zoom"></a>
+                                            <a href="https://www.facebook.com/theophane.girard?fref=ts"><img src="img/fb.png" class="iconeReseauxSociaux img-zoom"></a>
 
-                                          <a href="https://www.facebook.com/theophane.girard?fref=ts"><img src="img/fb.png" class="iconeBandeau img-zoom"></a>
-
-                                          <a href="https://twitter.com/girardtheophane?lang=fr"><img src="img/twitter.png" class="iconeBandeau img-zoom"></a>
-                                    </div>
+                                            <a href="https://twitter.com/girardtheophane?lang=fr"><img src="img/twitter.png" class="iconeReseauxSociaux img-zoom"></a>
+                                      </div>
                               </div>
-					<div id="espaceLien">
-                                                <hr>
-                                                <div class="verticalAlign">
-                                                <a class="scrollTo" href="#profil">Mon Profil</a>
-                                              </div>
-                                                <hr>
-                                                <div class="verticalAlign">
-                                                <a class="scrollTo longMot" href="#expPro">Mon Experience Professionnelle</a>
-                                              </div>
-                                                <hr>
-                                                <div class="verticalAlign">
-                                                <a class="scrollTo" href="#formation">Ma Formation</a>
-                                              </div>
-                                                <hr>
-                                                <div class="verticalAlign">
-      						                              <a class="scrollTo" href="#skill">Mes Compétences</a>
-                                              </div>
-                                                <hr>
-                                                <div class="verticalAlign">
-                    				                        <a class="scrollTo" href="#langue">Mes Langues</a>
-                                                  </div>
-                                                <hr>
-                                                <div class="verticalAlign">
-      						                                    <a class="scrollTo longMot" href="#centreInteret">Mes Activités transversales</a>
-                                                    </div>
-                                                <hr>
+					<div id="espaceLienPC" class="espaceLien">
+                                                      <hr>
+                                                            <a class="scrollTo" href="#profil">Mon Profil</a>
+                                                      <hr>
+                                                            <a class="scrollTo longMot" href="#expPro">Mon Experience Professionnelle</a>
+                                                      <hr>
+                                                            <a class="scrollTo" href="#formation">Ma Formation</a>
+                                                      <hr>
+                                                            <a class="scrollTo" href="#skill">Mes Compétences</a>
+                                                      <hr>
+                                                          <a class="scrollTo" href="#langue">Mes Langues</a>
+                                                      <hr>
+                                                            <a class="scrollTo longMot" href="#centreInteret">Mes Activités transversales</a>
+                                                      <hr>
 					</div>
                   </div>
 
-                  <section class="col-lg-8 col-sm-8 col-xs-12 content">
+                  <section class="col-lg-8 col-sm-8 col-xs-12" id="content">
                         <article id="intro">
                               <h1> Théophane GIRARD</h1>
                               <h3> Développeur Orienté Objet, Développeur Web</h3>
@@ -135,7 +108,6 @@
                                     <div class="largeurInfo"><em>Âge :</em><span>21 ans (1994)</span></div>
 
                               </article>
-
                               <article id="expPro" class="cachee">
 
 
@@ -169,50 +141,47 @@
                                         </li>
                                       </ul>
                                 </article>
-
                                 <article id="formation" class="cachee">
 
-       						<h3>Formation</h3>
+                                        <h3>Formation</h3>
 
-       				<ul>
-       					<li>
-       					<div class="sujet">2013-2015 IUT Informatique</div> <div class="ville">Blagnac </div> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
-       					</li>
-       					<li>
-       					<div class="sujet">2012-2013 Année préparatoire</div> <div class="ville">EISTI - École Internationale des Sciences et du
-       				Traitement de l’Information</div>  <div class="lieu">Académie de Bordeaux</div>
-       					</li>
-       					<li>
-       					<div class="sujet">2012 BAC S </div><div class="lieu">Lycée Clémence-Royer de Fonsorbes</div>
+                              <ul>
+                                  <li>
+                                        <div class="sujet">2015-2016 License Professionnelle en alternance APSIO - Analyste Programmeur Spécialisé en Ingénierie des Objets</div> <div class="ville">Blagnac </div> <div class="lieu">Université Jean Jaurès (anciennement Mirail)</div>
+                                  </li>
+                                  <li>
+                                        <div class="sujet">2013-2015 IUT Informatique</div> <div class="ville">Blagnac </div> <div class="lieu">Université Jean Jaurès</div>
+                                  </li>
+                                  <li>
+                                        <div class="sujet">2012-2013 Année préparatoire</div> <div class="ville">EISTI - École Internationale des Sciences et du
+                                              Traitement de l’Information</div>  <div class="lieu">Académie de Bordeaux</div>
+                                  </li>
+                                  <li>
+                                        <div class="sujet">2012 BAC S </div><div class="lieu">Lycée Clémence-Royer de Fonsorbes</div>
+                                  </li>
+                              </ul>
+                              </article>
 
-       					</li>
+                              <article id="skill" class="cachee">
 
+                                                <h3>Compétences</h3>
 
-
-
-
-       				</ul>
-       				</article>
-       				<article id="skill" class="cachee">
-
-       							<h3>Compétences</h3>
-
-                         		<ul>
-                         			<li>
-                         				<div class="sujet">Langages</div> <div class="ville">  Java, C#, MySQL, HTML 5, PHP, JQuery, C, Python, Cobol</div>
-                         			</li>
-                         			<li>
-                         			      <div class="sujet">Base de données </div> <div class="ville">MySQL, Microsoft SQL Server</div>
-                         			</li>
+                                    <ul>
+                                          <li>
+                                                <div class="sujet">Langages</div> <div class="ville">  Java, C#, MySQL, HTML 5, PHP, JQuery, C, Python, Cobol</div>
+                                          </li>
+                                          <li>
+                                                <div class="sujet">Base de données </div> <div class="ville">MySQL, Microsoft SQL Server</div>
+                                          </li>
                                           <li>
                                                 <div class="sujet">Logiciels</div> <div class="ville">SVN, Word, Excel, Virtualbox, MySQL Workbench, Photofiltre</div>
                                           </li>
                                           <li>
                                                 <div class="sujet">Modélisation</div> <div class="ville">Merise, UML</div>
                                           </li>
-                         		</ul>
+                                    </ul>
 
-       				</article>
+                              </article>
 
                               <article id="langue" class="cachee">
 
@@ -230,20 +199,21 @@
 
                               </article>
                               <article id="centreInteret" class="cachee">
-       					<h3>Mes Activités transversales</h3>
+                                    <h3>Mes Activités transversales</h3>
 
-       				            <ul>
+                                          <ul>
                                                <li>
                                                     <div class="sujet">2014-2015 (en cours)</div> <div class="ville"> animateur Chef Scout </div> <div class="lieu">Scout et Guide de France</div>
                                               </li>
-       					          <li>
-       					                <div class="sujet">Sport</div> <div class="ville">badminton (4 ans)</div>
-       					          </li>
-       					          <li>
-       					               <div class="sujet">Artistique</div> <div class="ville">montage vidéo, dessin</div>
-       					          </li>
+                                              <li>
+                                                    <div class="sujet">Sport</div> <div class="ville">badminton (4 ans)</div>
+                                              </li>
+                                              <li>
+                                                   <div class="sujet">Artistique</div> <div class="ville">montage vidéo, dessin</div>
+                                              </li>
                                         </ul>
-       				</article>
+                              </article>
+
 
                   </section>
             </div>
