--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <script type="text/javascript" src="script/script.js"></script>
             <script type="text/javascript" src="jqm/jquery.touchSwipe.min.js"></script>
             <script type="text/javascript" src="jqm/jquery.touchSwipe.js"></script>
-                        <link rel="stylesheet" href="TEST1.css" />
-                        <link rel="stylesheet" href="TEST2.css" />
+                        <link rel="stylesheet" href="style.css" />
+                        <link rel="stylesheet" href="css/responsive.css" />
     </head>
 
     <body>
